Fix contrast in overflow-wrap

--- a/live-examples/css-examples/text/overflow-wrap.css
+++ b/live-examples/css-examples/text/overflow-wrap.css
@@ -1,5 +1,6 @@
 .example-container {
-    background-color: rgba(255, 215, 0, .6);
+    background-color: rgba(255,0,200,.2);
+    border: 3px solid #663399;
     padding: .75em;
     width: min-content;
     max-width: 11em;
